<resources>
    <string name="app_name">Мои рыболовные места</string>

    <!--content description strings-->
    <string name="add_photo">Добавить фото</string>
    <string name="search">Искать</string>
    <string name="edit_place_info">Настроить информацию о месте</string>
    <string name="button_back">Назад</string>
    <string name="fishing_status">Результаты рыбалки</string>
    <string name="button_apply">button apply</string>
    <string name="bad_bite">Плохой клёв</string>
    <string name="arrow_forward">arrow forward</string>
    <string name="normal_bite">Средний клёв</string>
    <string name="good_bite">Хороший клёв</string>
    <string name="button_delete_place_description">Удалить описание места</string>
    <!---->

    <string name="add_place">Добавить место</string>
    <string name="add_place_description">Добавить описание места</string>
    <string name="no_places_added">Нет сохраненных мест</string>
    <string name="no_place_descriptions_added">Нет описания места</string>
    <string name="no_photo">Нет фото</string>
    <string name="place_name">Называние места</string>
    <string name="locality">Населенный пункт</string>
    <string name="fishing_type">Вид ловли</string>
    <string name="fish_species">Виды рыб</string>
    <string name="place_list">Список мест</string>

    <string name="place_info">Информация о месте</string>
    <string name="place_photo">Фото места</string>

    <string name="place_already_exists">Место уже добавлено</string>
    <string name="all_fields_must_be_filled">Заполните все поля описания</string>

    <string name="filter_by_in_normal_bite">Фильтр средний клёв</string>
    <string name="filter_by_bad_bite">Фильтр плохой клёв</string>
    <string name="filter_by_good_bite">Фильтр хороший клёв</string>
    <string name="road_to_water">Подъезд к воде</string>
    <string name="distance">Км от МКАД (КМ)</string>
    <string name="description">Подробное описание места</string>
    <string name="application_date">Дата рыбалки %1$s</string>
    <string name="warning">Внимание!</string>
    <string name="are_you_sure_wont_to_delete_place_description">Удалить описание места?</string>
    <string name="ok">Ок</string>
    <string name="error">Ошибка!</string>
    <string name="show_all">Показать все</string>



</resources>