<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/workStatusCustomView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/imageButtonBadBite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:contentDescription="@string/bad_bite"
        android:src="@drawable/fish3" />

    <ImageView
        android:id="@+id/imageViewArrowForward1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_weight="1"
        android:contentDescription="@string/arrow_forward"
        android:src="@drawable/ic_baseline_arrow_forward_24" />

    <ImageButton
        android:id="@+id/imageButtonNormalBite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:contentDescription="@string/normal_bite"
        android:src="@drawable/fish2" />

    <ImageView
        android:id="@+id/imageViewArrowForward2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_weight="1"
        android:contentDescription="@string/arrow_forward"
        android:src="@drawable/ic_baseline_arrow_forward_24" />

    <ImageButton
        android:id="@+id/imageButtonGoodBite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:contentDescription="@string/good_bite"
        android:src="@drawable/fish1" />

</LinearLayout>