<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddPlace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:contentDescription="@string/button_back"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewActivityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/add_place"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonBack"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/buttonApply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:contentDescription="@string/button_apply"
                android:foregroundGravity="left"
                android:src="@drawable/ic_baseline_check_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/placePhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/my"
        android:contentDescription="@string/place_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAddPlace" />

    <TextView
        android:id="@+id/noPhotoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_photo"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/placePhoto"
        app:layout_constraintEnd_toEndOf="@+id/placePhoto"
        app:layout_constraintStart_toStartOf="@+id/placePhoto"
        app:layout_constraintTop_toTopOf="@+id/placePhoto" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/accent"
        android:contentDescription="@string/add_photo"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/placePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placePhoto"
        app:maxImageSize="28dp" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/placeNameInputLayout"
        android:background="@color/my"
        style="@style/textInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placePhoto">


        <EditText

            android:id="@+id/editTextPlaceName"
            style="@style/textInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="@string/place_name"

            android:hint="@string/place_name"
            android:inputType="text"
            app:boxStrokeColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/localityTextInput"
        android:background="@color/my"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/fishingTypeTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeNameInputLayout">

        <EditText
            android:id="@+id/editTextLocality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints="@string/locality"
            android:hint="@string/locality"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fishingTypeTextInputLayout"
        android:background="@color/my"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/localityTextInput"
        app:layout_constraintTop_toBottomOf="@+id/placeNameInputLayout">

        <EditText
            android:id="@+id/editTextFishingType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:autofillHints="@string/fishing_type"
            android:hint="@string/fishing_type"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my"
        android:layout_marginTop="24dp"
        app:hintTextColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/localityTextInput">

        <EditText
            android:id="@+id/editTextFishSpecies"
            android:background="@color/my"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="@string/fish_species"
            android:hint="@string/fish_species"
            android:inputType="text"
            app:boxStrokeColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>